test-Element entfernt

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
@@ -98,7 +98,7 @@
                     {{ key|replace({' ': '_'}) }}
                 {% endfor %}
                 ">
-                    <li>test</li>
+                    {#<li>test</li>#}
                 </ul>
 
                 {% include '@FHBingenMHB/buttons.html.twig' %}
