Lleine CSS-Änderung (assets:install)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -91,6 +91,10 @@ body {
     width: 475px;
 }
 
+.sonstigesClass {
+    width: 475px;
+}
+
 div.ourButtons {
     margin-top: 50px;
     /* TODO: Bei Gelegenheit ändern */
