--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungUebersicht.html.twig
@@ -13,26 +13,32 @@
         <ul>
             <li><a href="{{ path('planungErstellen') }}">Neue Planung erstellen</a></li>
         </ul>
-        <table id="table" class="table table-bordered tablesorter">
-            <thead>
+        {% if planungen is not empty %}
+            <table id="table" class="table table-bordered tablesorter">
+                <thead>
                 <tr>
                     <th>Modultitel</th>
                     <th>letzte Änderung</th>
                     <th>freigeben</th>
                     <th>löschen</th>
                 </tr>
-            </thead>
-            <tbody>
-            {% for planung in planungen %}
-                <tr>
-                    <td><a href="{{ path('planungBearbeiten', {'id': planung.getModulID()}) }}">{{planung.getName()}}</a></td>
-                    <td>{{planung.getErstellungsdatum()|date('d.m.Y')}}</td>
-                    <td><a href="{{ path('planungFreigeben', {'id': planung.getModulID()}) }}">freigeben</a></td>
-                    <td><a href="{{ path('planungLoeschen', {'id': planung.getModulID()}) }}">löschen</a></td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for planung in planungen %}
+                    <tr>
+                        <td>
+                            <a href="{{ path('planungBearbeiten', {'id': planung.getModulID()}) }}">{{ planung.getName() }}</a>
+                        </td>
+                        <td>{{ planung.getErstellungsdatum()|date('d.m.Y') }}</td>
+                        <td><a href="{{ path('planungFreigeben', {'id': planung.getModulID()}) }}">freigeben</a></td>
+                        <td><a href="{{ path('planungLoeschen', {'id': planung.getModulID()}) }}">löschen</a></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>Sie verwalten zurzeit keine Module, die den Status "in Planung" haben.</p>
+        {% endif %}
     </div>
 
     {% include '@FHBingenMHB/flashbags.html.twig' %}
