--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
@@ -1,5 +1,7 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
+
+{# TODO: löschen, kann alles von planungBearbeiten gemacht werden #}
 {% form_theme form _self %}
 
 {% block form_row %}
