if-Abfrage ob es Module ohne Code gibt (2)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeUebersicht.html.twig
@@ -12,7 +12,7 @@
     </script>
     <div class="table-responsive">
         <h3>Module ohne Modulcode aus Studiengang {{ studiengang.__toString() }}</h3>
-        {% if dummy is not empty %}
+        {% if dummyAngebote is not empty %}
             <table id="table-without-code" class="table table-bordered tablesorter">
                 <thead>
                 <tr>
