if-Abfrage ob es Module ohne Code gibt (3)

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeUebersicht.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulCodeUebersicht.html.twig
@@ -37,7 +37,7 @@
                 </tbody>
             </table>
         {% else %}
-            <p>Es gibt zurzeit keine Angebote ohne Modulcode in Ihrem Studiengang</p>
+            <p>Es gibt zurzeit keine Angebote ohne Modulcode in Ihrem Studiengang.</p>
         {% endif %}
 
         <h3 style="margin-top: 50px">Module mit Modulcode aus Studiengang {{ studiengang.__toString() }}</h3>
