--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -10,7 +10,7 @@
         });
     </script>
     <div class="table-responsive">
-        <h3>Module als Modulbeauftragter</h3>
+        <h3>Module als Modulbeauftragte/r</h3>
         {% if modulverantwortung is not empty %}
             <table id="modulverantwortlicher" class="table table-bordered tablesorter">
                 <thead>
@@ -57,7 +57,7 @@
             <p>Sie sind bei keinem Modul als Modulbeauftragte/r eingetragen.</p>
         {% endif %}
 
-        <h3 style="margin-top: 50px">Module als Lehrender</h3>
+        <h3 style="margin-top: 50px">Module als Lehrende/r</h3>
         {% if modullehrend is not empty %}
             <table id="lehrender" class="table table-bordered tablesorter">
                 <thead>
