Kleine Verbessung bei der MHB-Zusammenstellung

--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -96,6 +96,7 @@ body {
 }
 
 div.ourButtons {
+    clear: both;
     margin-top: 50px;
     /* TODO: Bei Gelegenheit ändern */
     margin-bottom: 200px;
