kleiner fix in PDF

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -34,7 +34,7 @@
             border-collapse: collapse;
         }
 
-        .modul table + th, .modul table td {
+        .modul table th, .modul table td {
             border: 1px solid gray;
             padding: 0 10px;
         }
