--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -82,7 +82,7 @@
                 {% for studienplan in modulBeschreibung.getStudienplaene() %}
                     <tr>
                         <td class="studiensemseter startsemester">{{ studienplan.getStartsemester() }}:</td>
-                        <td class="studiensemseter">{{ studienplan.getRegelsemester()|replace({'[': '', ']': '', ',': '. + '}) }}. Semester</td>
+                        <td class="studiensemseter">{{ studienplan.getRegelsemester()|replace({'[': '', ']': '', ',': '. + '}) ~ '. Semester' }}</td>
                     </tr>
                 {% endfor %}
                 </table>
