--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -58,9 +58,21 @@
                         <tr>
                             <td>{{ form_widget(form.dauer) }}</td>
                             <td>
-                                <INPUT TYPE=RADIO NAME="einheit" VALUE="wochen">Wochen<br/>
-                                <INPUT TYPE=RADIO NAME="einheit" VALUE="monate">Monate<br/>
-                                <INPUT TYPE=RADIO NAME="einheit" VALUE="semester" CHECKED>Semester
+                                {% if einheit == 'Wochen' %}
+                                    <input type="radio" name="einheit" value="Wochen" checked>Wochen<br/>
+                                {% else %}
+                                    <input type="radio" name="einheit" value="Wochen">Wochen<br/>
+                                {% endif %}
+                                {% if einheit == 'Monate' %}
+                                    <input type="radio" name="einheit" value="Monate" checked>Monate<br/>
+                                {% else %}
+                                    <input type="radio" name="einheit" value="Monate">Monate<br/>
+                                {% endif %}
+                                {% if einheit == 'Semester' %}
+                                    <input type="radio" name="einheit" value="Semester" checked>Semester
+                                {% else %}
+                                    <input type="radio" name="einheit" value="Semester">Semester
+                                {% endif %}
                             </td>
                         </tr>
                     </table>
