--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -38,7 +38,9 @@
     </script>
 
     <div class="table-responsive">
+        {% block formStart %}
         {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
+        {% endblock formStart %}
         <table class="table table-bordered">
             {{ form_errors(form) }}
             <tr>
