--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -6,7 +6,7 @@
 
 {% block beauftragter %}
     {{ form_row(form.beauftragter) }}
-{% endblock %}
+{% endblock beaufttragter %}
 
 {% block lehrende %}
      <h4 style="font-weight: bold">Lehrende</h4>
@@ -24,4 +24,4 @@
          {% endfor %}
      </ul>
      <a id="add-another-lehrende">Lehrenden hinzufügen</a>
-{% endblock %}
+{% endblock lehrende %}
