--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -101,7 +101,7 @@
             {{ form_row(form.StudienleistungSonstiges) }}
         </table>
         {% block lehrende %}
-        {% endblock %}
+        {% endblock lehrende %}
 
         {% include '@FHBingenMHB/buttons.html.twig' %}
         {{ form_end(form) }}
