--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -48,7 +48,7 @@
 
 {% block beauftragter %}
     {{ form_row(form.beauftragter) }}
-{% endblock beaufttragter %}
+{% endblock beauftragter %}
 
 {% block lehrende %}
      <h4 style="font-weight: bold">Lehrende</h4>
